add form to create a new class, add listing for classes and class detailed
